--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="imusic/hbd.mp3"></source>
-	   Your browser isn't invited for super fun audio time.
+	   Your browser doesnot support audio.
     </audio>
     
-	<div class="balloons text-center" id="b2">
-    	<h2 style="color:#213ee2;">S</h2>
+	<div class="balloons text-center" id="b3">
+    	<h2 style="color:#b71c1c;">S</h2>
     </div>
-	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">A</h2>
+	<div class="balloons text-center" id="b7">
+    	<h2 style="color:#006064;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
     	<h2 style="color:#8377E4;">I</h2>
